test/classes/errors/nilability-init-var/init-var-oknil-borrowed-from-nonnil-unmanaged.chpl
//  lhs: borrowed?  rhs: unmanaged!  ok

class MyClass {
  var x: int;
}

var rhs = new unmanaged MyClass();

var lhs: borrowed MyClass? = rhs;

delete rhs;
